2010-05-10  Ethan A Merritt  <merritt@u.washington.edu

	* term/post.trm (PS_set_font): set ... font ",size" was not working
	for non-enhanced text.  Now it is.

2010-05-09  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/eval.c (magnitude): Yesterday's change breaks if the complex
	argument is {0,0}.

2010-05-08  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/eval.c (magnitude): Make implementation robust to overflows
	and underflows.

2010-05-06  David Marx  <itsdmarx@users.sourceforge.net>

	* src/syscfg.c: Tweaked version of _bool support for Sun/Solaris

2010-05-06  Ethan A Merritt  <merritt@u.washington.edu

	* term/cairo.trm (cairotrm_graphics): Handle the special case of
	streaming pdfcairo output to stdout.  (Requires cairo version >=
	1.2) Bug #578311

2010-05-05  Ethan A Merritt  <merritt@u.washington.edu

	* term/post.trm src/term.c: Move a global declaration out of post.trm so
	that gnuplot can be built without including the postscript terminal.

2010-05-02  Thomas Sefzick <thse@users.sourceforge.net>

	* src/gadgets.h src/graphics.c src/save.c src/set.c set/show.c
	src/tables.c src/tables.h docs/gnuplot.doc:

	New options "set key maxcolumns N maxrows M" to manually adjust the
	automatic layout of items in the figure legend. Implemented for 2D
	plots only.

2010-05-02  Ethan A Merritt  <merritt@u.washington.edu

	* configure.in src/save.c src/set.c src/show.c src/unset.c src/fit.c
	src/fit.h docs/gnuplot.doc config/config.os2 config/config.wc
	config/config.nt config/config.dj2 config/config.oww config/config.cyg
	config/config.amg config/config.mgw:

	Remove conditional flag GP_FIT_ERRVARS, default to "set fit errorvar".
	Tracker item #2985752

	* src/misc.c (lp_parse): "lc variable" was being lost in some cases.
	Bugfix

2010-04-24  Ethan A Merritt  <merritt@u.washington.edu

	* config.mgw config.cyg config.os2:  Enable HIDDEN_QUADTREE by default.
	Tracker item #2990173
